# Hands-on-Machine-Learning-with-Python

./: .envrc  .gitattributes  .gitignore  02_2_Python_for_Data_Science_(DataViz) (updated).ipynb  Cuda_Test.ipynb  Luv  README.md  puv.py  pyproject.toml
2. Python for Data Science/: 02_Python_for_Data_Science.ipynb
4. Build your first ML model/: 04_first_ML_model.ipynb
Assignments/: Assignment_02.ipynb
My_Assignments/: Assignment_01.ipynb  Assignment_02.ipynb  Assignment_03.ipynb  Assignment_04.ipynb  Assignment_04_part_01.ipynb  Assignment_04_part_02.ipynb  Cover Page.ipynb  EEE_4703_Cover Page.html  Heart_prac.ipynb  OEL_PRE.ipynb  Open_Ended_Lab_01.ipynb
notebook/: Lab_01.ipynb
src/hands_on_machine_learning_with_python/: __init__.py
