[project]
name = "hands-on-machine-learning-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.2",
    "tensorflow>=2.14.0",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
