[project]
name = "hands-on-machine-learning-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "tensorflow>=2.14.0",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
dev-dependencies = [
    "pandoc>=2.4",
    "nbconvert>=7.16.4",
]
